# Robolabs-VEX-AI-High-Stakes

./: .gitignore  README.md
3D Models/Camera/: D435 Case (Front).STL  D435 Case (Rear).STL
3D Models/Camera/Assembly/: D435 Case (Front).SLDPRT  D435 Case (Rear).SLDPRT  Intel Realsense D435.SLDPRT  Realsense D345 Case Assembly.SLDASM
3D Models/Camera/Assembly/Hardware/: 0.50in Standoff.SLDPRT  92125A611_18-8 Stainless Steel Hex Drive Flat Head Screw.SLDPRT
3D Models/Jetson/: Jetson_UPS Case (Bottom).STL  Jetson_UPS Case (Top).STL
3D Models/Jetson/Assembly/: 40x40x20 Fan.SLDPRT  Jetson_UPS Case.SLDPRT
3D Models/Jetson/Assembly/Hardware/: 91292A014_18-8 Stainless Steel Socket Head Screw.SLDPRT  94209A347_Thread-Forming Screws for Soft Metal.SLDPRT
3D Models/Jetson/Jetson + UPS Case/: Adafruit LSM6DS3-LIS3MDL.SLDPRT  UPS Power Module (B).SLDPRT
3D Models/Jetson/Jetson + UPS Case/Hardware/: 22mm Brass Standoff.SLDPRT  6mm Brass Standoff.SLDPRT  93655A020_Male-Female Threaded Hex Standoff.SLDPRT  94209A352_Thread-Forming Screws for Soft Metal.SLDPRT
Brain Example/include/: JetsonComm.h  JetsonCommStats.h  JetsonCommTypes.h  RobotLink.h  robot-config.h  vex.h
Brain Example/src/: Dashboard.cpp  JetsonComm.cpp  JetsonCommStats.cpp  RobotLink.cpp  main.cpp  robot-config.cpp
Jetson Example/: CMakeLists.txt  data.txt  transfer.txt
Jetson Example/include/: BrainComm.h  BrainCommStats.h  Camera.h  FieldMapper.h  GPS.h  IMU.h  IMUDataTypes.h  KalmanIMU.h  LIS3MDL.h  LSM6DS3.h  ObjectDetection.h  RobotPosition.h  RobotVisualizer.h  UPS.h
Jetson Example/src/: BrainComm.cpp  Camera.cpp  FieldMapper.cpp  GPS.cpp  IMU.cpp  KalmanIMU.cpp  Model.cpp  ObjectDetection.cpp  RobotPosition.cpp  RobotVisualizer.cpp  UPS.cpp  main.cpp
include/: BrainCommTypes.h  FieldMapper.h  GPS.h  IMU.h  Model.h  PortDetector.h  Position.h  UPS.h
src/: BrainComm.cpp  BrainCommStats.cpp  Camera.cpp  GPS.cpp  IMU.cpp  Model.cpp  Position.cpp  RobotPosition.cpp  UPS.cpp
